# elevenlabs-mcp

./: .env.example  CLAUDE.md  README.md  gemini-extension.json  pyproject.toml
elevenlabs_mcp/: convai.py  model.py  server.py  utils.py
src/elevenlabs_mcp/: __init__.py  server.py
tests/: conftest.py  test_server.py  test_utils.py
